[workspace]
resolver = "2"

members = [
    "pgpu-render",
    "piet-gpu",
    "piet-gpu-derive",
    "piet-gpu-hal",
    "piet-gpu-types",
    "piet-scene",
    "tests",
]

#[patch.crates-io]
#ash-window={git='https://github.com/Matthias-Fauconneau/ash'}
#ash={git='https://github.com/Matthias-Fauconneau/ash'}
